# auto-edit

auto-mograph-bot/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
auto-mograph-bot/configs/: default.yaml  prompts.txt
auto-mograph-bot/docs/: UI_README.md  concurrency_README.md  config_profiles_README.md  stability_README.md
auto-mograph-bot/src/: config.py
auto-mograph-bot/src/config_center/: center.py
auto-mograph-bot/src/logging/: __init__.py  structlog.py
auto-mograph-bot/src/prompts/: __init__.py  pool.py
auto-mograph-bot/src/runner/: __init__.py  cli.py  job.py  locks.py  scheduler.py
auto-mograph-bot/src/sd/: __init__.py  img2vid.py  txt2img.py
auto-mograph-bot/src/security/: expiry.py
auto-mograph-bot/src/system/: __init__.py  gpu_probe.py
auto-mograph-bot/src/uploader/: interfaces.py  router.py
auto-mograph-bot/src/uploader/providers/: android_appium.py  douyin_web.py  tiktok_like_api.py  weixin_channels_web.py  xiaohongshu_web.py
auto-mograph-bot/src/video/: __init__.py  ffmpeg_utils.py  postprocess.py
auto-mograph-bot/ui/: app.py  main_window.py  state.py
auto-mograph-bot/ui/components/forms/: db_form.py  pipeline_form.py  secrets_form.py  uploader_form.py  vps_form.py
auto-mograph-bot/ui/components/views/: config_editor.py  dashboard_view.py  first_run_wizard.py  logs_view.py  runs_view.py
auto-mograph-bot/ui/qss/: app.qss
auto-mograph-bot/ui/services/: db_service.py  pipeline_service.py  secrets_service.py  uploader_service.py
auto-mograph-bot/ui/utils/: crypto.py  proc.py  yaml_io.py
(+4 files in other folders)
