[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-mograph-bot"
version = "0.1.0"
description = "Automation pipeline for text-to-image and image-to-video content creation"
authors = [{ name = "Auto Mograph Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "pydantic>=2.5",
    "rich>=13.7",
    "numpy>=1.24",
    "opencv-python>=4.9",
    "ffmpeg-python>=0.2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.5",
]

[tool.setuptools.packages.find]
where = ["src"]
